# Key-value-store-based-on-AVL-tree

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cc
avl_tree/: abstract_store.h  self_balancing_binary_search_tree.cc  self_balancing_binary_search_tree.h  value.h
cmake_modules/: ClangFormat.cmake
interface/: console_interface.cc  console_interface.h
resources/: tree_100_values.dot
src/: abstract_store.h  main.cc  self_balancing_binary_search_tree.cc  self_balancing_binary_search_tree.h  test.dot  tests_self_balancing_binary_search_tree.cc  value.h
tests/: CMakeLists.txt  tests_self_balancing_binary_search_tree.cc
